tests/cases/errors/invalid-variable/undefined-in-array/input.sym
{ $env production }
[ $env
, $region
, $zone
]
